--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,29 @@
-html, body, .container, #sidebar, #mapcontainer {
+html, body, #sidebar, #propery-details, #mapcontainer, .main-container {
   height: 100%;
+  margin: 0px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.container-fluid {
+  background: white;
   margin: 0;
 }
 
-.container {
-    display: flex;
+#navbar {
+  padding: 0;
+  margin: 0;
+}
+
+.main-container {
+  flex-grow: 1;
+  flex-shrink: 1;
+  display: flex;
+  width: 100%;
+  overflow-y: hidden;
 }
 
 #sidebar {
@@ -16,19 +35,34 @@ html, body, .container, #sidebar, #mapcontainer {
   flex-grow: 1;
 }
 
+#property-details {
+position: fixed;
+  background: darkgray;
+  width: 320px;
+  height: 100%;
+  left: -320px;
+  transition: all 250ms linear;
+}
+
+#property-details.active {
+  left:0px;
+}
+
 h1 {
   font-family: sans-serif;
   font-size: 34px;
-  font-color: #636363;
+  font-color: white;
   padding: 10px;
+  margin: 0px;
 
 }
 
 h2 {
   font-family: sans-serif;
-  font-size: 18px;
+  font-size: 22px;
   font-color: #636363;
   padding-left: 10px;
+  margin; 0px;
 }
 
 h3 {
@@ -47,19 +81,9 @@ h4 {
 
 p {
   font-family: sans-serif;
-  font-size: 16px;
+  font-size: 15px;
   font-color: #636363;
   padding: 10px;
-}
-
-#legend {
-  background: #1d1d1d;
-  max-width: 300px;
-  padding: 5px;
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.4);
 }
 
 #legend1 div span {
@@ -69,4 +93,6 @@ margin-right: 5px;
 margin-right: 10px;
 width: 10px;
 padding-left: 10px;
+font-family: sans-serif;
+font-size: 14px;
 }
