--- a/css/styles.css
+++ b/css/styles.css
@@ -38,9 +38,11 @@ body {
 
 #property-details {
 position: fixed;
-  background: darkgray;
-  width: 320px;
-  left: -320px;
+overflow: scroll;
+  background: lightgray;
+  width: 360px;
+  left: -360px;
+  height: 100%;
   transition: all 250ms linear;
 }
 
@@ -61,8 +63,8 @@ h2 {
   font-family: sans-serif;
   font-size: 22px;
   font-color: #636363;
-  padding-left: 10px;
-  margin; 0px;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 h3 {
