--- a/css/styles.css
+++ b/css/styles.css
@@ -61,10 +61,10 @@ h1 {
 
 h2 {
   font-family: sans-serif;
-  font-size: 22px;
+  font-size: 20px;
   font-color: #636363;
   margin-top: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 h3 {
@@ -97,4 +97,39 @@ width: 10px;
 padding-left: 10px;
 font-family: sans-serif;
 font-size: 14px;
+}
+
+.colors {
+  width: 100%;
+  height: 30px;
+}
+
+#c1 {
+  height: 23px;
+  background-color: red; /* For browsers that do not support gradients */
+  background-image: linear-gradient(to right, #45caff, #7DDAFF, white, #ff1b6b, #A10038);
+}
+
+#mapScore {
+  text-align: center;
+}
+
+.color-container {
+  margin-top: 4px;
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  margin-bottom: 15px;
+  font-weight:bold;
+  font-size: 14px;
+}
+
+.color-code {
+  display:flex;
+  margin: 10px;
+}
+
+.legend-head {
+  text-align: center;
+  font-size: 16px;
 }
