--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container-fluid {
-  background: white;
+  background: #45caff;
   margin: 0;
 }
 
@@ -27,7 +27,7 @@ body {
 }
 
 #sidebar {
-  background: lightgray;
+  background: #eeeeee;
   width: 360px;
   overflow: scroll;
 }
@@ -39,7 +39,7 @@ body {
 #property-details {
 position: fixed;
 overflow: scroll;
-  background: lightgray;
+  background: #eeeeee;
   width: 360px;
   left: -360px;
   height: 100%;
@@ -50,13 +50,25 @@ overflow: scroll;
   left:0px;
 }
 
+#legend-container {
+  position:absolute;
+  flex-grow: 1;
+  padding: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .5);
+  line-height: 18px;
+  height: 100px;
+  width: 300px;
+  right: 30px;
+  bottom: 30px;
+  background-color:  rgba(255,255,255,0.9);
+}
+
 .info-container {
   font-family: "math", sans-serif;
   font-weight: lighter;
   margin-left: 15px;
-  margin-top: 15px;
   padding; 15px;
-  font-size: 16px;
+  font-size: 14px;
 
 }
 
@@ -101,17 +113,6 @@ p {
   padding: 10px;
 }
 
-#legend1 div span {
-display: inline-block;
-height: 10px;
-margin-right: 5px;
-margin-right: 10px;
-width: 10px;
-padding-left: 10px;
-font-family: sans-serif;
-font-size: 14px;
-}
-
 .colors {
   width: 100%;
   height: 30px;
@@ -121,10 +122,6 @@ font-size: 14px;
   height: 23px;
   background-color: red; /* For browsers that do not support gradients */
   background-image: linear-gradient(to right, #45caff, #7DDAFF, white, #ff1b6b, #A10038);
-}
-
-#mapScore {
-  text-align: center;
 }
 
 .color-container {
@@ -146,4 +143,27 @@ font-size: 14px;
   font-family: "math", sans-serif;
   text-align: center;
   font-size: 16px;
+}
+
+.tooltip {
+  position: relative;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
